# ComputerGraphics

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  camera.h  cg_config.h.in  color.h  shader_program.h  utils.h
common/src/: camera.cpp  shader_program.cpp  utils.cpp
common/ui/: controls.cpp  controls.h  gl_window.cpp  gl_window.h  main_window.cpp  main_window.h
lab1/: CMakeLists.txt
lab1-2/: CMakeLists.txt
lab1-2/include/: controls.h
lab1-2/src/: controls.cpp  main.cpp
lab1/include/: common.h  controls.h  window.h
lab1/src/: common.cpp  controls.cpp  main.cpp  window.cpp
lab3/: CMakeLists.txt
lab3/include/: controls.h
lab3/src/: controls.cpp  main.cpp
lab4/: CMakeLists.txt
lab4/include/: controls.h  kb_knot_storage.h
lab4/src/: controls.cpp  kb_knot_storage.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/include/: controls.h
lab5/src/: controls.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/include/: controls.h
lab6/src/: controls.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: callbacks.h  controls.h  light.h  shape.h  shape_shader.fs  shape_shader.vs  vertex.h
lab7/src/: callbacks.cpp  controls.cpp  light.cpp  main.cpp  shape.cpp
